--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,7 +33,7 @@ dependencies {
     //noinspection GradleCompatible
     implementation 'com.android.support:support-v4:28.0.0'
     //noinspection GradleCompatible
-    implementation 'com.android.support:design:27.1.1'
+    implementation 'com.android.support:design:29.1.1'
     implementation 'com.google.firebase:firebase-auth:19.3.0'
     implementation 'com.google.firebase:firebase-database:19.2.1'
     implementation 'com.google.firebase:firebase-core:17.2.3'
@@ -42,6 +42,9 @@ dependencies {
     //noinspection GradleCompatible
     implementation 'com.android.support:cardview-v7:28.0.0'
     implementation 'com.rengwuxian.materialedittext:library:2.1.4'
+
+    implementation 'de.hdodenhof:circleimageview:2.2.0'
+    implementation 'com.github.bumptech.glide:glide:4.8.0'
 
     testImplementation 'junit:junit:4.12'
     //noinspection GradleCompatible,GradleCompatible
