--- a/app/build.gradle
+++ b/app/build.gradle
@@ -46,7 +46,12 @@ dependencies {
     implementation 'de.hdodenhof:circleimageview:2.2.0'
     implementation 'com.github.bumptech.glide:glide:4.8.0'
 
+    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     testImplementation 'junit:junit:4.12'
+
+    implementation 'com.google.android.material:material:1.0.0'
+    //noinspection GradleCompatible
+
     //noinspection GradleCompatible,GradleCompatible
     implementation 'com.android.support:appcompat-v7:28.0.0'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
