--- a/app/build.gradle
+++ b/app/build.gradle
@@ -52,6 +52,7 @@ dependencies {
     testImplementation 'junit:junit:4.12'
 
     implementation 'com.google.android.material:material:1.1.0'
+    implementation 'androidx.recyclerview:recyclerview:1.1.0'
     //noinspection GradleCompatible
 
     //noinspection GradleCompatible,GradleCompatible
