--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -32,7 +32,7 @@
             android:name=".LoginActivity"
             android:parentActivityName=".StartActivity" />
 
-        <service android:name=".Notifications.MyFirebaseMessaging"
+        <service android:name=".Notifications.MyFirebaseIdService"
             android:enabled="true"
             android:exported="true">
             <intent-filter>
